# account_management

./: .dockerignore  .env.example  .env.server  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.server.yml  docker-compose.yml
.github/: CODEOWNERS
backend/: Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_profile_sessions_security_events.py  0003_avatar_history.py
backend/app/: __init__.py  audit.py  avatar_history.py  cloudinary_service.py  config.py  database.py  deps.py  main.py  models.py  oidc_clients.py  profile_completion.py  schemas.py  security.py
backend/app/routers/: __init__.py  auth.py  oidc.py  profile.py
backend/app/scripts/: __init__.py  dev.py  seed_client.py  serve.py
backend/tests/: test_auth_flow.py  test_oidc_client_sync.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts  vite-env.d.ts
