# Created at: 2026-05-11 01:17
# Updated at: 2026-05-11 01:40
# Description: Python package configuration and backend dependencies.

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "account-management-backend"
version = "0.1.0"
description = "Unified account portal backend with FastAPI, OIDC, MFA, and Cloudinary avatars."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13",
  "bcrypt>=4,<4.1",
  "cloudinary>=1.41",
  "cryptography>=42",
  "email-validator>=2.1",
  "fastapi>=0.111",
  "passlib[bcrypt]>=1.7",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "pyjwt>=2.8",
  "pyotp>=2.9",
  "python-multipart>=0.0.9",
  "qrcode[pil]>=7.4",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.29"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.0",
  "pytest-cov>=5.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
